# NTU_TDC2_dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
dashboard/: app.py
dashboard/views/: __init__.py  inference.py  raw_data.py  results.py  runs.py
notebooks/: direct_forecast_eda.ipynb  feature_eda.ipynb  prediction.ipynb
rack_forecast/: __init__.py  config.py  data.py  evaluate.py  paths.py  persistence.py  pipeline.py  plots.py  trainer.py  windowing.py
rack_forecast/models/: __init__.py  cnn1d.py  linear.py  lstm.py  rf.py  svr.py  transformer.py  xgboost.py
results/run_03_R0605-PA_L60_H30/: config.json  metrics.csv  scalers.pkl
results/run_03_R0605-PA_L60_H30/cnn1d/: predictions.npz
results/run_03_R0605-PA_L60_H30/cnn1d/models/: cnn1d.pt
results/run_03_R0605-PA_L60_H30/linear/: predictions.npz
results/run_03_R0605-PA_L60_H30/linear/models/: linear.pkl
results/run_03_R0605-PA_L60_H30/lstm/: predictions.npz
results/run_03_R0605-PA_L60_H30/lstm/models/: lstm.pt
results/run_03_R0605-PA_L60_H30/transformer/: predictions.npz
results/run_03_R0605-PA_L60_H30/transformer/models/: transformer.pt
results/run_03_R0605-PA_L60_H30/xgboost/: predictions.npz
scripts/: run_prediction.py
